--- a/icity/RCListen/RCXiangCeViewController.xib
+++ b/icity/RCListen/RCXiangCeViewController.xib
@@ -27,6 +27,9 @@
                             <state key="normal" title="Button" image="btn_sina.png">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
+                            <connections>
+                                <action selector="clickedShareToSinaButton:" destination="-1" eventType="touchUpInside" id="1fn-9t-iUB"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="b0S-kU-FFR">
                             <rect key="frame" x="203" y="62" width="44" height="44"/>
@@ -34,6 +37,9 @@
                             <state key="normal" title="Button" image="btn_qq.png">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
+                            <connections>
+                                <action selector="clickedShareToQQButton:" destination="-1" eventType="touchUpInside" id="Mue-TK-Xch"/>
+                            </connections>
                         </button>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="分享到" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="dQC-nZ-mN3">
                             <rect key="frame" x="88" y="20" width="136" height="21"/>
